Add TODOs for some stuff that we still need to get rid of.