@@ -118,12 +118,15 @@
 						<source>${maven.compiler.source}</source>
 						<target>${maven.compiler.target}</target>
 						<compilerArgs>
+              <!-- Contains class com.sun.tools.javac.util.Context which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
 							<arg>--add-exports</arg>
 							<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+
+              <!-- Contains class com.sun.tools.javac.file.JavacFileManager which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
 							<arg>--add-exports</arg>
 							<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-							<arg>--add-exports</arg>
-							<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+
+              <!-- Contains class jdk.javadoc.internal.tool.Start which we need for testing, in org.frankframework.frankdoc.wrapper.TestUtil -->
 							<arg>--add-exports</arg>
 							<arg>jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</arg>
 						</compilerArgs>
